# apcalt-python

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml  release.yml
apcalt_python/: __main__.py  _entrypoint.py  app.py  decorator.py  exceptions.py  log.py  request.py  routes.py  sessions.py
apcalt_python/apc/: api.py  auth.py
apcalt_python/learnosity/: assignment.py  request.py
