[tool.poetry]
name = "apcalt-python"
version = "0.2.0"
description = ""
authors = ["david-why <david_why@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
aiohttp = "^3.9.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
quart = "^0.19.4"
aiofiles = "^23.2.1"
markupsafe = "^2.1.3"
quart-cors = "^0.7.0"

[tool.poetry.group.actions]
optional = true

[tool.poetry.group.actions.dependencies]
pyinstaller = "^6.2.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
