[project]  # for cx_Freeze
name = "apcalt-python"
version = "0.2.1"

[tool.poetry]
name = "apcalt-python"
version = "0.2.1"
description = ""
authors = ["david-why <david_why@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
aiohttp = "^3.9.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
quart = "^0.19.4"
aiofiles = "^23.2.1"
markupsafe = "^2.1.3"
quart-cors = "^0.7.0"
certifi = "^2024.2.2"

watchfiles = [
    { markers = "sys_platform == 'darwin'", url = "https://gist.githubusercontent.com/david-why/946f7bfd0953fb7dcead860a37c0dcbd/raw/99f26eb76f57d424bae98c18096d4a1d928303b3/watchfiles-0.21.0-cp311-cp311-macosx_10_12_x86_64.macosx_11_0_arm64.macosx_10_12_universal2.whl" },
    { markers = "sys_platform != 'darwin'", version = "*", source = "pypi" }
]
pyyaml = [
    { markers = "sys_platform == 'darwin'", url = "https://gist.githubusercontent.com/david-why/64d4e6ecc896c71a361bad982807406c/raw/d5e9d8510f6eb243f75c5befe5bc3457baeef0fc/PyYAML-6.0.1-cp311-cp311-macosx_10_9_universal2.whl" },
    { markers = "sys_platform != 'darwin'", version = "*", source = "pypi" }
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
cx-freeze = [
    { markers = "sys_platform == 'darwin'", url = "https://gist.githubusercontent.com/david-why/d7bf9f740a8026c673cf195e47f23f5e/raw/d02ae86c622b0f1193dc77f67549b40bcf05763f/cx_Freeze-7.0.0-cp311-cp311-macosx_10_9_universal2.whl" },
    { markers = "sys_platform != 'darwin'", version = "^7.0.0", source = "pypi" }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.cxfreeze.executables]]
script = "apcalt_python/_entrypoint.py"
base = "console"
target_name = "apcalt-python"
shortcut_name = "Start APCAlt"
shortcut_dir = "DesktopFolder"

[tool.cxfreeze.build_exe]
build_exe = "build/apcalt-python"
packages = ["uvicorn"]

[tool.cxfreeze.bdist_mac]
bundle_name = "apcalt-python"

[tool.cxfreeze.bdist_appimage]
target_name = "apcalt-python.AppImage"
